# rust_chat

./: .gitignore  Cargo.toml  README.md  chat.db
.VSCodeCounter/2026-04-16_14-45-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.sqlx/: query-d906a1d29cdfeab85d56722c7e21a564a640a1eef08bcd2258afcc8d55fa8a57.json
data/: 001_init.sql  002_friends.sql  002_private_chat.sql
migrate/: 001_init.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  state.rs  ws.rs
src/auth/: middleware.rs  mod.rs  password.rs  token.rs
src/db/: cursor.rs  file.rs  friend.rs  group.rs  message.rs  mod.rs  offline.rs  private.rs  user.rs
src/handlers/: auth.rs  chat.rs  file.rs  friends.rs  group.rs  mod.rs  unread.rs  ws.rs
src/models/: api.rs  conversation.rs  mod.rs  ws.rs
src/ws/: message.rs  mod.rs
static/: index.html  login.html  register.html
