[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.59"
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
bytes = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tokio-stream = "0.1"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }